--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -12,11 +12,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  align-content: center;
   font-size: 0.85rem;
+  min-height: 100%;
   max-width: var(--max-width);
   width: 100%;
   z-index: 2;
-  padding: 2rem;
+  padding-top: 3rem;
   font-family: var(--font-mono);
 }
 
